--- a/version-2/osiris_stylesheet.css
+++ b/version-2/osiris_stylesheet.css
@@ -3,19 +3,15 @@ html,body, .big-wrap {
     margin: 0;
     height: 100vh;
     background: powderblue;
-    background-size: cover;
+    /*background-size: cover;*/
 }
-
-/*html, body {
-  height: 100%;
-}*/
-
 
 #footer {
   height: 30px;
   background: black;
   bottom: 0;
-  position: absolute;
+  /*position: absolute;*/
+  position: fixed;
   width: 100%;
   font-family: 'Arial', sans-serif;
   text-align: center;
@@ -31,8 +27,6 @@ html,body, .big-wrap {
   letter-spacing: 3px;
   font-size: .8em;
 }
-
-
 
 .wrapper {
   background-size: cover;
@@ -224,3 +218,30 @@ html,body, .big-wrap {
 #IMG_56 {
   background-image: url("./images/IMG_56.JPG");
 }
+
+
+/*g a l l e r y*/
+
+/*FIXED HEIGHT CARD; WIDTH ISN'T 100%*/
+.card {
+  /*height: 768px;*/
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.card img {
+  height: auto;
+  max-width: 100%;
+}
+
+
+
+/*NATURAL SIZE IMG*/
+/*.card {
+  height: 100%;
+  width: 100%;
+}
+
+.card img {
+  padding-bottom: 40px;
+}*/
