--- a/version-2/osiris_stylesheet.css
+++ b/version-2/osiris_stylesheet.css
@@ -4,6 +4,7 @@ html,body, .big-wrap {
     height: 100vh;
     background: powderblue;
     /*background-size: cover;*/
+    font-family: 'Arial', sans-serif;
 }
 
 #footer {
@@ -222,16 +223,30 @@ html,body, .big-wrap {
 
 /*g a l l e r y*/
 
-/*FIXED HEIGHT CARD; WIDTH ISN'T 100%*/
-.card {
-  /*height: 768px;*/
-  margin-bottom: 40px;
+.gallery-wrap h1 {
   text-align: center;
+  font-weight: bold;
+  letter-spacing: 3px;
+  padding: 2%;
+}
+
+.card {
+  margin-bottom: 40px;
 }
 
 .card img {
   height: auto;
   max-width: 100%;
+}
+
+.details {
+  font-size: .9em;
+  margin-left: 10px;
+}
+
+.title {
+  letter-spacing: 2px;
+  font-weight: lighter;
 }
 
 
