--- a/version-2/osiris_stylesheet.css
+++ b/version-2/osiris_stylesheet.css
@@ -14,25 +14,28 @@ html,body, .big-wrap {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  padding-top: 3%;
 }
 
-#footer .active {
+#header .active {
   color: #FF00C3;
 }
 
-#footer {
+#header {
   height: 30px;
   background: black;
-  bottom: 0;
+  top: 0;
   /*position: absolute;*/
   position: fixed;
   width: 100%;
   font-family: 'Arial', sans-serif;
   text-align: center;
   line-height: 30px;
+  z-index: 1000;
+  margin-bottom: 2%;
 }
 
-#footer a {
+#header a {
   color: white;
   text-decoration: none;
   padding-left: 5%;
@@ -239,6 +242,8 @@ html,body, .big-wrap {
 .gallery-wrap {
   margin-left: 100px;
   margin-right: 100px;
+  margin-top: 120px;
+  /*margin-top: 5%;*/
 }
 
 .gallery-wrap h1 {
@@ -286,11 +291,34 @@ html,body, .big-wrap {
 
 /*m a s k s*/
 
-.ui .card .image img {
-  width: 350px;
+.mask-gallery {
+  /*margin-top: 5%;*/
+  margin-top: 120px;
 }
-/*.modal-dialog {width:600px;}
-.thumbnail {margin-bottom:6px;}*/
+
+.thumbnail.thumbnail.thumbnail {
+  border: none;
+  /*padding: 0;*/
+  border-radius: 0;
+  margin-bottom:6px;
+  padding-bottom: 20px;
+}
+
+.modal-dialog.modal-dialog.modal-dialog {
+  height: 90vh;
+}
+
+.modal-backdrop.modal-backdrop.modal-backdrop {
+   opacity: 0.8;
+}
+
+.modal-content.modal-content.modal-content {
+  background: none;
+}
+
+.modal-body.modal-body.modal-body {
+  padding: 0;
+}
 
 /*a b o u t */
 
