--- a/version-2/osiris_stylesheet.css
+++ b/version-2/osiris_stylesheet.css
@@ -17,9 +17,56 @@ html,body, .big-wrap {
   padding-top: 3%;
 }
 
-/*.header .active {
-  color: #FF00C3;
+/*nav bar*/
+
+.nav-bar-links {
+  margin-top: 0;
+}
+.header ul{
+    padding: 0;
+    list-style: none;
+}
+.header ul li{
+    display: inline-block;
+    position: relative;
+    line-height: 21px;
+    /*text-align: left;*/
+    text-align: center;
+    width: 200px;
+   /* padding-left: 3%;
+    padding-right: 3%;*/
+}
+
+.header ul li a {
+    display: block;
+    padding: 8px 25px;
+    text-decoration: none;
+}
+
+/*.header ul li a:hover{
+    color: #fff;
+    background: #939393;
+    width: 100%;
 }*/
+
+.header ul li ul.dropdown{
+    min-width: 125px; /* Set width of the dropdown */
+    display: none;
+    position: absolute;
+    z-index: 999;
+    background: white;
+}
+
+.header ul li ul.dropdown-black {
+  background: black;
+}
+
+.header ul li:hover ul.dropdown{
+    display: block; /* Display the dropdown */
+}
+.header ul li ul.dropdown li{
+    display: block;
+}
 
 .header {
   height: 30px;
@@ -46,33 +93,33 @@ html,body, .big-wrap {
 }
 
 #home-header,
-#about-header {
+#about-header,
+#artworks-header {
   background: #000000;
 }
 
 #home-header .active,
-#about-header .active {
+#about-header .active,
+#artworks-header .active {
   color: #FFFFFF;
 }
 
 #home-header a,
-#about-header a {
-  color: #D8D8D8;
+#about-header a,
+#artworks-header a {
+  color: #727272;
 }
 
-#gallery-header,
-#artworks-header {
+#gallery-header {
   background: #FFFFFF;
 }
 
-#gallery-header .active,
-#artworks-header .active {
+#gallery-header .active {
   color: #000000;
 }
 
-#gallery-header a,
-#artworks-header a {
-  color: #D8D8D8;
+#gallery-header a {
+  color: #727272;
 }
 
 #artworks-header a {
@@ -312,31 +359,20 @@ html,body, .big-wrap {
   margin: 3%;
 }
 
-
-/*NATURAL SIZE IMG*/
-/*.card {
-  height: 100%;
-  width: 100%;
-}
-
-.card img {
-  padding-bottom: 40px;
-}*/
-
-
 /*m a s k s*/
 
 .mask-gallery {
   /*margin-top: 5%;*/
-  margin-top: 120px;
+  padding-top: 120px;
+  background: black;
 }
 
 .thumbnail.thumbnail.thumbnail {
   border: none;
-  /*padding: 0;*/
+  padding: 0;
   border-radius: 0;
   margin-bottom:6px;
-  padding-bottom: 20px;
+  /*padding-bottom: 20px;*/
 }
 
 .modal-dialog.modal-dialog.modal-dialog {
@@ -357,6 +393,11 @@ html,body, .big-wrap {
 
 /*a b o u t */
 
+.contact-container {
+  background: black;
+  height: 100%;
+}
+
 .contact-details {
   width: 300px;
 /*  margin-left: auto;
@@ -365,6 +406,7 @@ html,body, .big-wrap {
   margin-right: auto;
   padding-top: 10%;
   padding-bottom: 10%;
+  color: white;
 }
 
 .contact-details h1 {
@@ -382,5 +424,36 @@ html,body, .big-wrap {
 }
 
 .contact-details .fa {
-  color: cyan;
+  color: #727272;
+}
+
+.contact-details .fa-inverse.fa-inverse {
+  color: white;
+}
+
+/* a b o u t     f o o t e r */
+.footer {
+  height: 30px;
+  bottom: 5px;
+  position: absolute;
+  /*position: fixed;*/
+  width: 100%;
+  font-family: 'Arial', sans-serif;
+  /*text-align: center;*/
+  line-height: 30px;
+  z-index: 1000;
+  margin-top: 2%;
+  width: 98%;
+}
+
+.footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  float: right;
+}
+
+.footer ul li {
+  display: inline;
+  padding-left: 15px;
 }
