Make modal click 60% width instead of 40%

--- a/version-2/osiris_stylesheet.css
+++ b/version-2/osiris_stylesheet.css
@@ -432,7 +432,8 @@ body {
 
 .modal-body.modal-body.modal-body {
   padding: 0;
-  width: 40%;
+  /*width: 40%;*/
+  width: 60%;
   margin: 0 auto;
 }
 
